# ad-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  ads.txt  db.py  fly.toml  main.py  models.py  ping_indexnow.py  ping_search_engines.py  ping_sitemap.py  publisher_test.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  utils.py  yandex_6079f30d3b2abdbc.html
.github/workflows/: ping-sitemap.yml
app/: __init__.py  blog_seo.py  config.py  database.py  dependencies.py  main.py  template_utils.py
app/models/: __init__.py  ad.py  tracking.py  zone.py
app/routers/: __init__.py  admin.py  api.py  public.py  seo.py  serving.py
app/services/: __init__.py  ad_selection.py  analytics.py
static/css/: main.css
templates/: base.html  blog.html  embed.js.jinja2  index.html  publisher-test.html  publisher.html  render.html  stats.html  tools.html
templates/admin/: ads.html  analytics.html  base.html  zones.html
templates/ads/: rent.html
templates/components/: breadcrumb.html  footer.html  nav.html
templates/public/: blog_ad_server_setup.html  blog_banner_ctr_optimization.html  blog_base.html  blog_best_free_tools.html  blog_html5_testing_guide.html  blog_index.html  blog_monetize_website.html  blog_open_source_ad_servers.html  blog_preview_html5_banners.html  blog_standard_banner_sizes.html  publisher.html  rent.html  stats.html
templates/tools/: banner-preview.html  html5-collection.html  html5-test.html  html5-validator.html
tests/: conftest.py  test_admin_analytics_integration.py  test_analytics_unit.py  test_crud.py  test_models.py  test_render_click.py  test_weighted_choice.py
tools/: ad-html-tester.html  adsense-preview.html  banner-preview-160x300.html  banner-preview-160x600.html  banner-preview-300x250.html  banner-preview-320x50.html  banner-preview-468x60.html  banner-preview-728x90.html  display-ad-preview.html  embed-checker.html  html5-banner-preview-collection.html  html5-banner-validator.html  index.html  publisher-auto-refresh.html  real-time-ad-check.html  test-html5-banner-preview.html
