[project]
name = "ad-server"
version = "0.1.0"
description = "FastAPI-based lightweight ad delivery system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlmodel>=0.0.24",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py311" # Change to "py312" if your venv uses 3.12
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# Style + correctness without being draconian
select = ["E", "F", "I", "UP", "B"]
ignore = ["E712"]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]    # Project root for imports

# ---- Static typing (mypy) ----
[tool.mypy]
python_version = "3.11"                                # Set to 3.12 if that's your default
plugins = []                                           # e.g. ["pydantic.mypy"] if needed
mypy_path = ["."]                                      # Project root
namespace_packages = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
check_untyped_defs = false
implicit_reexport = false
ignore_missing_imports = true
exclude = ["tests/fixtures/.*", "build/.*", "dist/.*"]

# ---- Type checker used by Pylance (Pyright) ----
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"    # Pragmatic defaults for current code style
venvPath = "."
venv = ".venv"
include = ["."]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
reportMissingTypeStubs = false
reportPrivateUsage = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

# ---- Coverage (coverage.py) ----
[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", "**/__init__.py", ".venv/*"]

[tool.coverage.report]
fail_under = 80 # Adjusted for realistic coverage
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.paths]
# Combine paths across OS/CI runners
source = [".", "*/site-packages"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
